sol/2009-p2-f1-pontes.txt
Caminho das Pontes
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2009f1p2_pontes.cpp: In function ‘int dijkstra(int, int)’:
2009f1p2_pontes.cpp:15:29: error: ‘INT_MAX’ was not declared in this scope
   15 |     fill(dist, dist + 1005, INT_MAX);
      |                             ^~~~~~~
2009f1p2_pontes.cpp:4:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    3 | #include <queue>
  +++ |+#include <climits>
    4 |
